# verdict

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  Cargo.toml  LICENSE  README.md  architecture.md  how_to.md
.github/: SOCIAL_PREVIEW.md
graphify-out/cache/: stat-index.json
memory/: memories.db  memories.db-shm  memories.db-wal
src/: action.rs  agent.rs  audit.rs  budget.rs  context.rs  eval.rs  guard.rs  injection.rs  lib.rs  pipeline.rs  prelude.rs  registry.rs  runner.rs  self_update.rs  toolset.rs  verdict.rs
src/agents/: coder.rs  debugger.rs  mod.rs  orchestrator.rs  planner.rs  reflector.rs  reviewer.rs
src/llm/: client.rs  mod.rs  provider.rs
src/mcp/: client.rs  mod.rs  server.rs  tool_adapter.rs
src/skills/: mod.rs  registry.rs  skill.rs
src/skills/builtin/: api_design.rs  code_review.rs  mod.rs  refactoring.rs  rust_debugging.rs  test_writing.rs
src/tools/: filesystem.rs  function.rs  http.rs  mod.rs  search.rs  shell.rs  tool.rs
tasks/: embeddings.npy  id_map.json  tasks.db  tasks.db-shm  tasks.db-wal
tests/: phase1.rs  phase10.rs  phase11.rs  phase12.rs  phase2.rs  phase3.rs  phase4.rs  phase5.rs  phase6.rs  phase7.rs  phase8.rs  phase9.rs
