[package]
name = "verdict"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "fs", "process"] }
async-trait = "0.1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
jsonschema = "0.18"
tiktoken-rs = "0.5"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
