[package]
name = "verdict"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "fs", "process"] }
tokio-util = "0.7"
async-trait = "0.1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
jsonschema = "0.18"
tiktoken-rs = "0.5"
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
toml = "0.8"
serde_yaml = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
mockito = "1"
tempfile = "3"
